friends, menu, progress bar, cases

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=bot_token
-url=url_for_telegram
+BOT_TOKEN=7653847437:AAF3mygodpZCo4uBDaLVO7OIIl1KXHkEkuY
+url=https://653d-94-51-116-50.ngrok-free.app
