рулетка на гл странице

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 BOT_TOKEN=7653847437:AAF3mygodpZCo4uBDaLVO7OIIl1KXHkEkuY
-url=https://9c1e-94-51-116-50.ngrok-free.app
+url= https://ae31-5-227-30-77.ngrok-free.app
