--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7653847437:AAF3mygodpZCo4uBDaLVO7OIIl1KXHkEkuY
-url=  https://5105-5-227-52-50.ngrok-free.app
+url=  https://df0d-5-227-52-80.ngrok-free.app
 
