--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7653847437:AAF3mygodpZCo4uBDaLVO7OIIl1KXHkEkuY
-url=  https://43be-5-227-54-52.ngrok-free.app
+url=  https://0d17-5-227-54-36.ngrok-free.app
 
