--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7653847437:AAF3mygodpZCo4uBDaLVO7OIIl1KXHkEkuY
-url=  https://ffc6-5-227-54-74.ngrok-free.app
+url=  https://5fd9-5-227-54-74.ngrok-free.app
 
