--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7653847437:AAF3mygodpZCo4uBDaLVO7OIIl1KXHkEkuY
-url=  https://6105-5-227-54-95.ngrok-free.app
+url=  https://db85-5-227-54-66.ngrok-free.app
 
