--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7653847437:AAF3mygodpZCo4uBDaLVO7OIIl1KXHkEkuY
-url=  https://a681-5-227-54-86.ngrok-free.app
+url=  https://8d9d-170-64-188-248.ngrok-free.app
 
