--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-BOT_TOKEN=7653847437:AAF3mygodpZCo4uBDaLVO7OIIl1KXHkEkuY
-url=  https://8d9d-170-64-188-248.ngrok-free.app
+BOT_TOKEN = 7896856957:AAEkA_C_DZdwoz7PnSRgpemXpnSadxvAs9g
+url = https://8d9d-170-64-188-248.ngrok-free.app
+url_community = https://t.me/heroes_coin
+BOT_USERNAME = Heroes_coin_bot
+DB_PATH = state.db
+SUPPORT_ID = 6790944789
 
