--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN = 7896856957:AAEkA_C_DZdwoz7PnSRgpemXpnSadxvAs9g
+BOT_TOKEN = 
 url = https://8d9d-170-64-188-248.ngrok-free.app
 url_community = https://t.me/heroes_coin
 BOT_USERNAME = Heroes_coin_bot
